--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -19,7 +19,7 @@
 </head>
 <body id="page-cont">
   <div id="content">
-    <img alt="qrCode" id="img" src="images\image-qr-code.png">
+    <img alt="qrCode" id="img" src="images/image-qr-code.png">
     <h3 id="head" class="text">Improve your front-end skills by building projects</h3>
     <h4 id="para" class="text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</h4>
   </div>
